<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddProduct">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/purple_500"
        android:gravity="center" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="#6C00F8"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/resource_new" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="10dp"
            android:background="@android:color/holo_orange_light">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ajouter_produit"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/black"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="10dp"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/identifiant"
                        android:inputType="number"
                        android:textColor="@color/black"
                        >
                    </androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="10dp"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nom"
                        android:inputType="textCapWords"
                        android:textColor="@color/black"
                        >
                    </androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="10dp"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etCateg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/categorie"
                        android:inputType="textCapWords"
                        android:textColor="@color/black"
                        >
                    </androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="10dp"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prix"
                        android:inputType="numberDecimal"
                        android:textColor="@color/black"
                        >
                    </androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="10dp"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etQuantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/quantite"
                        android:inputType="number"
                        android:textColor="@color/black"
                        >
                    </androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/annuler"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:backgroundTint="#D32F2F"
                        >
                    </Button>
                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajouter"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:backgroundTint="#FFAD00"
                        >
                    </Button>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>